- Improved: Updated ePay form payment to use a template
- Improved: Show customer address on ePay backend
- Improved: SQL key/index optimizations
- Improved number of SQL queries
- Improved: Better formatting to attributes list. Show attribute name in product type setup wizard.
- Improved: Show field label not value in quick edit mode
- Fixed start & stop publishing dates not working
- Fixed Authorize.net failed transaction bug
- Removed pre-0.1 update code from runonce.php

Version 0.2.5 (2011-02-??)
------------------------------
- Fixed discount applied to subtotal on cart overrides other restrictions (Ticket #352)
- Fixed sql in edit-all mode on attributes

Version 0.2.4 (2011-01-17)
------------------------------
- Added: Use product ID in URL if alias is missing
- Updated ContentIsotope methods to match ModuleIsotope methods (Ticket #290)
- Fixed weight total shipping included rates from all shipping modules
- Fixed mandatory asterisks not appearing in checkout address fields
- Fixed email issues with mail clients not supporting <tfood>
- Fixed missing comma in mail text (Ticket #217)
- Fixed HTML issue in iso_reader_default.tpl (Ticket #203)
- Fixed: Custom templates were not always shown in "override all" mode (see Contao Core Ticket #2725)
- Fixed shipping and payment method always displaying error message (Ticket #175)
- Fixed toggle button not appearing for non-admins (Ticket #253)
- Fixed global operation labels in IE7 (Ticket #253)
- Fixed order delete button appearing for non-admins (Ticket #192)
- Fixed issues with runonce.php database file update on certain systems
- Fixed download listing out of view (Ticket #280)
- Fixed small error in the mod_iso_addressbook.tpl (Ticket #324)
- Fixed invalid name attribute in form tag (Ticket #322)
- Fixed: Product list did not show unpublished products when frontend preview was used
- Improved italian address formatting (Ticket #305)
- Improved UK address formatting (Ticket #301)
- Improved number of SQL queries